--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/dakshkhetan/codeial#readme",
   "dependencies": {
     "ejs": "^3.1.2",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "nodemon": "^2.0.2"
   }
 }
