--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.11",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
