--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.11",
+    "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
