--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.9.11",
     "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
