--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "kue": "^0.11.6",
     "mongoose": "^5.9.11",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.4.10",
@@ -38,6 +39,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^2.1.3",
     "socket.io": "^2.3.0"
   }
 }
